style: Modify UI for submission purposes: add positioning ..., spacing, measuring, and arranging views.

--- a/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
@@ -45,8 +45,8 @@
   ~  */
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Black solid background -->
-    <solid android:color="@color/black_field" />
+    <!-- Black semi-transparent background -->
+    <solid android:color="@color/black_wind" />
     <!-- Gold border -->
     <stroke
         android:width="1dp"
