--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -59,8 +59,7 @@
     Does NOT seem needed... I see no difference either way
      Look in comments above CollapsingToolbarLayout to see why it matters
   -->
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -173,6 +172,7 @@
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/detailtoolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
@@ -235,38 +235,75 @@
                 android:id="@+id/iv_poster_icon"
                 android:layout_width="@dimen/poster_icon_width"
                 android:layout_height="@dimen/poster_icon_height"
+                android:layout_margin="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
+            <!-- Used this to move movie title TextView just below the FAB so the FAB does not block
+             the movie title (if long enough) -->
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.10"/>
+
             <TextView
-                android:id="@+id/tv_rating"
-                android:textSize="@dimen/detail_rating_text_size"
-                style="@style/DetailTextViews"
+                android:id="@+id/tv_title_label"
+                style="@style/Labels"
+                android:text="@string/title_label"
                 app:layout_constraintLeft_toRightOf="@id/iv_poster_icon"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintBottom_toTopOf="@id/tv_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
             <TextView
                 android:id="@+id/tv_title"
-                android:textSize="@dimen/detail_title_text_size"
-                android:layout_marginLeft="@dimen/general_spacing"
-                android:layout_marginStart="@dimen/general_spacing"
                 style="@style/DetailTextViews"
+                app:layout_constraintLeft_toRightOf="@id/tv_title_label"
+                app:layout_constraintBottom_toTopOf="@id/guideline"/>
+
+            <TextView
+                style="@style/Labels"
+                android:id="@+id/tv_rating_label"
+                android:text="@string/voter_avg_label"
                 app:layout_constraintTop_toBottomOf="@id/tv_rating"
+                app:layout_constraintBottom_toTopOf="@id/tv_rating"
+                app:layout_constraintLeft_toRightOf="@id/iv_poster_icon"/>
+
+            <TextView
+                android:id="@+id/tv_rating"
+                style="@style/DetailTextViews"
+                app:layout_constraintTop_toBottomOf="@id/tv_title_label"
+                app:layout_constraintLeft_toRightOf="@id/tv_rating_label"/>
+
+            <TextView
+                style="@style/Labels"
+                android:id="@+id/tv_release_date_label"
+                android:text="@string/release_date_label"
+                app:layout_constraintTop_toBottomOf="@id/tv_release_date"
+                app:layout_constraintBottom_toTopOf="@id/tv_release_date"
                 app:layout_constraintLeft_toRightOf="@id/iv_poster_icon"/>
 
             <TextView
                 android:id="@+id/tv_release_date"
                 style="@style/DetailTextViews"
-                android:layout_marginLeft="@dimen/general_spacing_double"
-                android:layout_marginStart="@dimen/general_spacing_double"
-                app:layout_constraintTop_toBottomOf="@id/tv_title"
-                app:layout_constraintLeft_toRightOf="@id/iv_poster_icon"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_rating_label"
+                app:layout_constraintLeft_toRightOf="@id/tv_release_date_label"/>
+
+            <TextView
+                android:id="@+id/tv_summary_label"
+                android:text="@string/summary_label"
+                android:paddingLeft="@dimen/general_spacing_half"
+                style="@style/Labels"
+                app:layout_constraintTop_toBottomOf="@id/iv_poster_icon"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/tv_summary"
                 style="@style/DetailTextViews"
-                android:layout_margin="@dimen/general_spacing"
-                app:layout_constraintTop_toBottomOf="@id/iv_poster_icon"
+                android:padding="@dimen/general_spacing"
+                android:background="@drawable/border"
+                app:layout_constraintTop_toBottomOf="@id/tv_summary_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -307,8 +344,8 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/detail_fab_fav"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="85dp"
         android:layout_margin="@dimen/fab_margin_phone"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="end|bottom"/>
+        app:layout_anchor="@+id/app_bar"
+        app:layout_anchorGravity="right|bottom" />
 </android.support.design.widget.CoordinatorLayout>
