--- a/Popular_Movies_Stage02/app/src/main/res/layout/review_list_item.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/review_list_item.xml
@@ -67,6 +67,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@android:color/white"/>
+        android:padding="@dimen/general_spacing"
+        android:textColor="@color/gold_morning"
+        android:background="@drawable/border"/>
 
 </LinearLayout>
