--- a/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
@@ -51,6 +51,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorControlActivated">#FF4081</color>
+    <!-- Custom color names are nods to a superhero-epic web-serial I would recommend called Worm -->
     <color name="gold_morning">#FFD700</color>
-    <color name="black_field">#CC000000</color>
+    <color name="black_wind">#CC000000</color>
 </resources>
