--- a/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
@@ -65,7 +65,7 @@
         <item name="colorPrimary">@android:color/black</item>
         <!-- A darker variant of the primary color, used for the status
          bar (on Android 5.0+) and contextual app bars -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
         <!-- A secondary color for controls like checkboxes and fields
           The FAB is colored the colorAccent by default -->
         <item name="colorAccent">@color/gold_morning</item>
@@ -87,13 +87,8 @@
         <item name="android:paddingLeft">@dimen/general_spacing</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <!-- Detail Block Style -->
-    <style name="DetailBlocks">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/black_field</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_margin">@dimen/detail_text_margin</item>
     </style>
 
     <!-- Detail TextView Style -->
@@ -101,6 +96,7 @@
         <item name="android:layout_width">@dimen/detail_text_width</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/gold_morning</item>
+        <item name="android:textSize">@dimen/detail_text_size</item>
         <item name="android:layout_margin">@dimen/detail_text_margin</item>
     </style>
 
@@ -112,5 +108,6 @@
     <!-- Detail CollapsingToolbarLayout Collapsed Title Style -->
     <style name="CollapsedTitle">
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
