--- a/Baking/app/src/main/res/layout/recipe_list_item.xml
+++ b/Baking/app/src/main/res/layout/recipe_list_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   ~  PROJECT LICENSE
   ~
@@ -46,12 +45,55 @@
   -->
 
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
-    <!-- Phone only needs one fragment container, while Tablet needs at least two -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-    </FrameLayout>
+    <!-- All binding variables and method should go inside the <data> tag
+      Inside the <data> tags, a variable will be declared using the <variable> tag
+       The <variable> tag takes two attributes 'name' and 'type'
+        'name' is an alias name
+        'type' should be an object model class
+
+     Comment Source:
+      https://www.androidhive.info/android-working-with-databinding/ -->
+    <data>
+
+        <variable
+            name="recipe"
+            type="com.example.full_dream.baking.model.Recipe"/>
+    </data>
+
+    <!-- CardView is a ViewGroup
+      Attributes:
+       card_view:cardCornerRadius : Used to set the corner radius in our layouts
+       card_view:cardBackgroundColor : Used to set the background color of the view-->
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="10dp"
+        card_view:cardBackgroundColor="@color/cardview_light_background">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!--<ImageView-->
+                <!--android:id="@+id/iv_recipe_image"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:adjustViewBounds="true"/>-->
+
+            <!-- To bind a value, '@' annotation is used
+              Recipe 'name' is bound to the TextView using '@{recipe.name}'
+
+             Comment Source:
+              https://www.androidhive.info/android-working-with-databinding/ -->
+            <TextView
+                android:id="@+id/tv_recipe_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{recipe.name}"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
