--- a/Baking/app/src/main/res/layout/recipe_list_item.xml
+++ b/Baking/app/src/main/res/layout/recipe_list_item.xml
@@ -70,7 +70,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="10dp"
+        card_view:cardCornerRadius="8dp"
         card_view:cardBackgroundColor="@color/cardview_light_background">
 
         <LinearLayout
@@ -78,11 +78,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!--<ImageView-->
-                <!--android:id="@+id/iv_recipe_image"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:adjustViewBounds="true"/>-->
+            <ImageView
+                android:id="@+id/iv_recipe_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"/>
 
             <!-- To bind a value, '@' annotation is used
               Recipe 'name' is bound to the TextView using '@{recipe.name}'
