--- a/Baking/app/src/main/res/layout/fragment_recipe.xml
+++ b/Baking/app/src/main/res/layout/fragment_recipe.xml
@@ -44,20 +44,26 @@
   ~  SOFTWARE.
   -->
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- According to the Mocks, should display "Baking Time" -->
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar_recipe"-->
+        <!--<android.support.design.v7.widget.AppBarLayout-->
             <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize">-->
+            <!--android:layout_height="wrap_content">-->
 
-        <!--</android.support.v7.widget.Toolbar>-->
+            <!--&lt;!&ndash; According to the Mocks, should display "Baking Time" &ndash;&gt;-->
+            <!--<android.support.v7.widget.Toolbar-->
+                <!--android:id="@+id/toolbar_recipe"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="?attr/actionBarSize">-->
+
+            <!--</android.support.v7.widget.Toolbar>-->
+        <!--</android.support.design.v7.widget.AppBarLayout>-->
 
         <!-- According to the Mocks, should show a list of Recipe CardViews -->
         <android.support.v7.widget.RecyclerView
@@ -66,5 +72,5 @@
             android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
